--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;600;800&family=Stylish&display=swap');
+@font-face {
+    font-family: 'MyFont';
+    src: url('myfont.woff2') format('woff2');
+    font-display: swap;
+  }
+  
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-
-header{
-    min-height: 100vh;
-    width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(bg.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: relative;
+body{
+    scroll-behavior: smooth;
 }
+
 .navb{
     display: flex;
     justify-content: space-between;
@@ -39,13 +39,11 @@ header{
 
 }
 .nav-links a:hover{
-    background: darkgreen;
+    background: #0AFF0A;
     padding: 0.25rem;
     border-radius: 5px; 
 }
-#showMenu{
-    
-}
+
 .main{
     display: flex;
     height: 100vh;
@@ -64,12 +62,12 @@ h1{
 
 p{
     font-size: 1rem;
-    color: aliceblue;
+    color: #0078F0;
 }
 
 .btn{
-    background: #4a6186;
-    color: aliceblue;
+    background: #0054A8;
+    color: #FFFFFF;
     padding: 0.45rem 1.4rem;
     font-size: 1.2rem;
     border: 0;
@@ -80,19 +78,29 @@ p{
     outline: none;
 }
 .btn:hover{
-    background: darkgreen;
+    background: #0AFF0A;
     transform: scale(.96);
+    color: #0054A8;
 }
 .form{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
+    align-content: center;
     width: 280px;
     height: 380px;
     background-color: transparent;
     border: 2px solid gray;
     border-radius: 8px;
     color: aliceblue;
+}
+.form h2{
+    font-size: 2rem;
+    font-weight: 900;
+    text-align: center;
+}
+.label{
+    margin: 0 0 5px 8px;
 }
 h3{
     margin-top: 2rem;
@@ -102,7 +110,7 @@ h3{
 
 input{
     width: 95%;
-    padding: 0.8rem;
+    padding: 0.5rem;
     margin: 0.5rem;
     font-size: 18px;
     outline: none;
@@ -112,12 +120,15 @@ input{
 }
 
 input::placeholder{
-    color: #c9c7c5;
+    color: #595857;
     font-size: 1rem;
 }
+.signin-btn{
+    margin-left: calc(50% - 50px);
+}
 .btn{
-    background: #4a6186;
-    color: aliceblue;
+    background: #0054A8;
+    color: #FFFFFF;
     padding: 0.45rem 1.4rem;
     font-size: 1.2rem;
     border: 0;
@@ -136,7 +147,7 @@ input::placeholder{
     color: black;
 }
 .courses p{
-    color: #6767e7;
+    color: #1F1FC7e3;
     font-size: 14px;
 }
 .row{
@@ -147,7 +158,7 @@ input::placeholder{
 }
 .course-col{
     flex-basis: 31%;
-    background: #EDDDE0;
+    background: #CDB2B2;
     box-sizing: border-box;
     border-radius: 5px;
     transition: all 400ms ease;
@@ -175,11 +186,11 @@ input::placeholder{
 }
 .testimonials h3{
     font-size: 1rem;
-    color: darkgreen;
+    color: #595959;
 }
 .testimonials h2{
     font-size: 2.5rem;
-    color: #6767e7;
+    color: #2222C9;
 }
 .testimonial-row{
     display: flex;
@@ -189,12 +200,12 @@ input::placeholder{
 }
 
 .testimonial-row p{
-    color: #6767e7;
+    color: #2222C9;
     margin-top: .9rem;
 }
 .testmonial-col{
     flex-basis: 29%;
-    background: #BCE0E0;
+    background: #C8E5E5;
     text-align: start;
     box-sizing: border-box;
     border-radius: 5px;
@@ -238,7 +249,7 @@ input::placeholder{
     color: black;
 }
 .programs p{
-    color: #6767e7;
+    color: #2222C9;
     padding-top: 1.3rem;
 }
 .programs-row{
@@ -274,7 +285,7 @@ input::placeholder{
 }
 .fa-graduation-cap, 
 .fa-building-columns{
-    background: #6767e7;
+    background: #2222C9;
     margin: 1.1rem 2rem 0 0 ;
     padding: 10px;
     border-radius: 50%;
@@ -290,7 +301,7 @@ input::placeholder{
     color: black;
 }
 .teachers p{
-    color: #6767e7;
+    color: #2222C9;
     padding-top: 1.3rem;
 }
 .teachers-row{
@@ -311,7 +322,7 @@ input::placeholder{
     width: 140px;
     height: 140px;
     border-radius: 50%;
-    border: 1px solid #6767e7;
+    border: 1px solid #2222C9;
 }
 .teachers-col h4{
     font-size: 1.3rem;
@@ -321,6 +332,7 @@ input::placeholder{
     font-size: 1.2rem;
     font-weight: 100;
     padding-top: .8rem;
+    color: black;
 }
 .quote{
     min-height: 50vh;
@@ -342,7 +354,7 @@ input::placeholder{
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    border: 2px solid #6767e7;
+    border: 2px solid #2222C9;
 }
 .img-quote h5{
     margin: 1rem 0;
@@ -382,11 +394,11 @@ span{
     font-weight: 400;
 }
 .online-col p{
-    color: #6767e7;
+    color: #2222C9;
 
 }
 .footer{
-    background: #6767e7;
+    background: #2222C9;
     margin-top: 80px;
 }
 .footer-row{
@@ -418,7 +430,7 @@ span{
     transition: all 500ms ease;
 }
 .footer-col a:hover{
-    color: darkgreen;
+    color: #0AFF0A;
 }
 
 .footer-col i{
@@ -451,7 +463,7 @@ hr{
     color: red;
 }
 .copyright a{
-    color: darkgreen;
+    color: #0AFF0A;
     text-decoration: none;
     font-weight: 600;
     transition: 300ms;
@@ -468,7 +480,7 @@ hr{
     transition: all 500ms;
 }
 .media-icons a:hover{
-    color: darkgreen;
+    color: #0AFF0A;
     transform: rotateY(180deg);
 }
 
@@ -568,14 +580,13 @@ hr{
 
     .nav-links{
         position: fixed;
-        background-color: #4a6186;
+        background-color: #2222C9;
         width: 220px;
         height: 100vh;
         top: 0;
         right: 0;
         transition: 500ms;
-
-        
+          
     }
     .nav-links i{
         display: inline;
@@ -590,7 +601,7 @@ hr{
     .nav-links a{
        font-size: 1.5rem;
        margin-left: 3rem;
-       padding-top: 3rem;  
+       padding-top: 3rem; 
     }
 
     .navb .fa-bars{
@@ -642,7 +653,7 @@ hr{
     }
     .nav-links{
         position: fixed;
-        background-color: #4a6186;
+        background-color: #2222C9;
         width: 220px;
         height: 100vh;
         top: 0;
@@ -661,10 +672,10 @@ hr{
     }
 
     .nav-links a{
-       font-size: 1rem;
-       margin-left: 3rem;
-       padding-top: 3rem;
-       
+       display: flex;
+       justify-content: center;
+      align-content: center;
+      margin-top: 50px;
     }
 
     .navb .fa-bars{
